--- a/config/database.yml
+++ b/config/database.yml
@@ -21,8 +21,17 @@ default: &default
 
 
 development:
-  <<: *default
-  database: oms_development
+  primary: &primary_development
+    <<: *default
+    database: oms_development
+  queue:
+    <<: *primary_development
+    database: oms_development_queue
+    migrations_paths: db/queue_migrate
+  cable:
+    <<: *primary_development
+    database: oms_development_cable
+    migrations_paths: db/cable_migrate
 
   # The specified database role being used to connect to PostgreSQL.
   # To create additional roles in PostgreSQL see `$ createuser --help`.
