Add validations, uuid, better url slugs, archiving, version tracking, and color scheme enum to organizations
Remove the default generated tests.

--- a/test/fixtures/orgs.yml
+++ b/test/fixtures/orgs.yml
@@ -1,19 +1,35 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
+# == Schema Information
+#
+# Table name: orgs
+# Database name: primary
+#
+#  id           :bigint           not null, primary key
+#  color_scheme :enum             default("default"), not null
+#  domain       :text
+#  name         :text             not null
+#  org_uuid     :uuid             not null
+#  slug         :text             not null
+#  subdomain    :text
+#  created_at   :datetime         not null
+#  updated_at   :datetime         not null
+#  archived_at  :datetime
+#
+# Indexes
+#
+#  index_orgs_on_name      (name) UNIQUE
+#  index_orgs_on_org_uuid  (org_uuid) UNIQUE
+#  index_orgs_on_slug      (slug) UNIQUE
+#
 one:
-  org_uuid: 
-  slug: MyText
-  name: MyText
-  subdomain: MyText
-  domain: MyText
-  color_scheme: 
-  archived_at: 2026-02-22 08:53:54
+  org_uuid: 5c8c8e6b-dc90-4889-a4a0-d94fe72f6677
+  name: MyOrg1
+  slug: myorg1
+  color_scheme: default
 
 two:
-  org_uuid: 
-  slug: MyText
-  name: MyText
-  subdomain: MyText
-  domain: MyText
-  color_scheme: 
-  archived_at: 2026-02-22 08:53:54
+  org_uuid: 7fd796bb-eed0-41bc-b75c-8974e8f99c32
+  name: MyOrg2
+  slug: myorg2
+  color_scheme: default
